[package]
name = "sync-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core .sync format parser, manifest handling, and archive builder"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
