[package]
name = "sync-format"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core .sync format parser, manifest handling, and archive builder"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
zip = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }

# Optional: signature verification
ed25519-dalek = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }

# Optional: encryption (vault support)
age = { workspace = true, optional = true }
secrecy = { workspace = true, optional = true }
scrypt = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }

[features]
default = ["signatures"]
signatures = ["dep:ed25519-dalek", "dep:bs58"]
encryption = ["dep:age", "dep:secrecy", "dep:scrypt"]
crypto = ["signatures", "encryption"]
